Fixes #1415 - ClayCSS Custom Checkbox / Radio calculate spacing based on the input size instead of base font size and line height
Fixes #1415 - ClayCSS Custom Checkbox / Radio added options to configure `$custom-control-indicator-position-top`, `$custom-control-margin-bottom`, `$custom-control-margin-top`, `$custom-control-min-height`

--- a/packages/clay-css/src/scss/atlas/variables/_custom-forms.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_custom-forms.scss
@@ -42,7 +42,6 @@ $custom-control-indicator-indeterminate-border-color: $custom-control-indicator-
 
 $custom-control-description-font-size: $input-label-font-size !default; // 13px
 $custom-control-description-disabled-color: $input-label-disabled-color !default;
-$custom-control-description-line-height: $custom-control-indicator-size + ($custom-control-indicator-border-width * 2) !default;
 
 // Custom Checkbox
 
